local storage, gestion des doublons, en cours

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <header class="header">
         <a href="./index.html" class="logo">Oricamera</a>
         <nav>
-            <a href="#"> <button>Mon panier</button></a>
+            <a href="./panier.html"> <button>Mon panier</button></a>
         </nav>    
 
     </header>
