affichage du panier

--- a/public/panier.html
+++ b/public/panier.html
@@ -21,6 +21,23 @@
     </header>
     <!--_____________________panier_______________________________________________-->
 
+    <section class="panier">
+        <div class="panier__title">
+            <div class="title">Produit</div>
+            <div class="title">Quantité</div>
+            <div class="title">Prix</div>
+            <div class="title">Total</div>
+        </div>
+        <div class="panier__container">
+            <!-- en JS-->
+        </div>
+        <div class="panier__total">
+            <div class="total">TOTAL</div>
+            <div class="somme">somme</div>
+        </div>
+
+    </section>
+
     <!--_____________________ footer _______________________________________________-->
     <footer>
         <ul>
