--- a/public/panier.html
+++ b/public/panier.html
@@ -47,27 +47,27 @@
             <div class="form__container1">
                 <p>
                         <label for="name">Nom : </label>
-                        <input type="text" name="Nom" id="name" autofocus>
+                        <input type="text" name="Nom" id="name" autofocus required>
                 </p>
                 <p>
                         <label for="prenom">Prénom : </label>
-                        <input type="text" name="Prénom" id="prenom">
+                        <input type="text" name="Prénom" id="prenom" required>
                 </p>
                 <p>
                         <label for="email">E-mail : </label>
-                        <input type="email" name="email" id="email">
+                        <input type="email" name="email" id="email" required>
                 </p>
                 <p>
                     <label for="adresse">Adresse : </label>
-                    <input type="text" name="Adresse" id="adresse">
+                    <input type="text" name="Adresse" id="adresse" required>
                 </p>
                 <p>
                     <label for="code-postal">Code postal : </label>
-                    <input type="number" name="Code postal" id="code-postal" maxlength="5">
+                    <input type="number" name="Code postal" id="code-postal" maxlength="5" required>
                 </p>
                 <p>
                     <label for="ville">Ville : </label>
-                    <input type="text" name="Ville" id="ville">
+                    <input type="text" name="Ville" id="ville" required>
                 </p>
             </div>
             <div class="form__container2">
