page confirmation commande, localstorage.clear, correction getion des options dans localstorage et panier

--- a/public/confirmOrder.html
+++ b/public/confirmOrder.html
@@ -20,24 +20,15 @@
         <a href="./index.html" class="logo">Oricamera</a>
     </header>
     <!--_____________________ confirmation de commande _______________________________________________-->
-<p>
-    Votre commande a bien été prise en compte. <br>
-Nous la traitons dans les plus brefs délais. <br>
-Pour toute question contacter contact.@oricamera.com
-</p>
-
-<h1 class="purchase-order">Récapitulatif de votre commande</h1>
-
-    <!--_____________________ footer _______________________________________________-->
-    <footer>
-        <ul>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">Mentions légales</a></li>
-            <li><a href="#">CGV</a></li>
-            <li><a href="#"> Préférences des cookies</a></li>
-        </ul>
-    </footer>
-
+    <section class="order">
+        <h1 class="purchase-order">Votre commande a bien été prise en compte !</h1>
+        <p class="order-id"></p>
+        <p>
+            Nous la traitons dans les plus brefs délais. <br>
+            Pour toute question contacter contact@oricamera.com
+        </p>
+    </section>
+    
     <script type="text/javascript" src="./JS/utils.js"></script>
     <script type="text/javascript" src="./JS/confirmOrder.js"></script>
 
