--- a/public/panier.html
+++ b/public/panier.html
@@ -25,6 +25,7 @@
     <section class="panier">
         <div class="panier__title">
             <div class="title">Produit</div>
+            <div class="title">Objectif</div>
             <div class="title">Quantité</div>
             <div class="title">Prix</div>
             <div class="title">Total</div>
