page confirmOrder, responsive, methode statique

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <header class="header">
         <a href="./index.html" class="logo">Oricamera</a>
         <nav>
-            <a href="./panier.html"> <button>Mon panier</button></a>
+            <a class="button" href="./panier.html">Mon panier</a>
         </nav>    
 
     </header>
@@ -28,7 +28,7 @@
     <section class="banner">
 
         <h1>Appareils photo vintage <br> pour passionnés de l'argentique</h1>
-        <a href="#range"><button>Voir la gamme</button></a>
+        <a class="button" href="#range" >Voir la gamme</a>
         
         <img id="banner__img" src="https://images.unsplash.com/photo-1452587925148-ce544e77e70d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1567&q=80" alt="photo d'un appareil photo vintage argentique">
     
