--- a/public/panier.html
+++ b/public/panier.html
@@ -63,21 +63,15 @@
                     <input type="text" name="Adresse" id="adresse" required>
                 </p>
                 <p>
-                    <label for="code-postal">Code postal : </label>
-                    <input type="number" name="Code postal" id="code-postal" maxlength="5" required>
-                </p>
-                <p>
                     <label for="ville">Ville : </label>
                     <input type="text" name="Ville" id="ville" required>
                 </p>
             </div>
             <div class="form__container2">
                 
-                <a class="submit-link" href="">
-                    <button type="submit" id="submit">
+                <button class="button submit-link" type="submit" id="submit">
                         Procéder au paiement
-                    </button>
-                </a>
+                </button>
             </div>
 
     </form>
