--- a/public/product.html
+++ b/public/product.html
@@ -19,7 +19,7 @@
     <header class="header">
         <a href="./index.html" class="logo">Oricamera</a>
         <nav>
-            <a href="./panier.html"> <button>Mon panier</button></a>
+            <a class="button" href="./panier.html">Mon panier</a>
         </nav>    
     </header>
     <!--_____________________ fiche produit _______________________________________________-->
