corrections verif input formulaire

--- a/public/panier.html
+++ b/public/panier.html
@@ -52,31 +52,25 @@
             <div class="form__container1">
                 <p>
                     <label for="nom">Nom : </label>
-                    <input type="text" name="Nom" id="nom" class="input"  pattern="[a-z]" autofocus required>
-                    <span class="error"></span>
-
+                    <input type="text" pattern="[a-zA-Z]{1,30}" name="Nom" id="nom" class="input" autofocus required>
                 </p>
                 <p>
                     <label for="prenom">Prénom : </label>
                     <input type="text" name="Prenom" id="prenom" class="input" required>
-                    <span class="error"></span>
 
                 </p>
                 <p class="p-email">
                     <label for="email">E-mail : </label>
                     <input type="email" name="email" id="email" required>
-                    <span class="error-email"></span>
                 </p>
                 <p>
                     <label for="adresse">Adresse : </label>
                     <input type="text" name="Adresse" id="adresse" class="input" required>
-                    <span class="error"></span>
 
                 </p>
                 <p>
                     <label for="ville">Ville : </label>
                     <input type="text" name="Ville" id="ville" class="input" required>
-                    <span class="error"></span>
 
                 </p>
             </div>
